<resources>
    <string name="app_name">TruckMyPup2</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Šifra</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Nevalidan email!</string>
    <string name="invalid_password">Šifra mora biti duža od 5 karaktera</string>
    <string name="invalid_conf_password">Šifre se ne poklapaju!</string>
    <string name="invalid_first_name">Ime mora biti duže od jednog karaktera!</string>
    <string name="invalid_last_name">Prezime mora biti duže od jednog karaktera!</string>
    <string name="invalid_phone">Broj telefona je neispravan!</string>

    <string name="login_failed">"Login failed"</string>

    <string name="from_device">Slika sa uređaja</string>
    <string name="from_camera">Slikajte</string>
    <string name="route_login">Vrati se na logovanje!</string>
    <string name="route_register">Registrujte se prvo!</string>
    <string name="login_welcome">Dobrodošli</string>
    <string name="register_welcome">Registrujte se!</string>
    <string name="first_name">Ime</string>
    <string name="last_name">Prezime</string>
    <string name="phone">Broj telefona</string>
    <string name="conf_pass">Potvrdite šifru</string>

    <string name="error_text">Pogrešni podaci!</string>

    <string name="invalid_photo">Slika nije izabrana!</string>
    <string name="valid_photo">Slika izabrana!</string>
    <string name="register_error">Neuspešna registracija!</string>

    <string name="home">Glavna</string>
    <string name="add">Dodajte</string>
    <string name="map">Mapa</string>
    <string name="account">Akaunt</string>
    <string name="rank">Poeni</string>

    <string name="vasnalog">Vaš nalog</string>
    <string name="save">Sačuvajte promene</string>
    <string name="delete_acc">Obrišite nalog</string>

    <string name="dogs">Pas</string>
    <string name="cat">Mačka</string>
    <string name="other">Ostalo</string>
    <string name="all">Sve</string>
    <string name="post">Dodajte objavu</string>

    <string name="postname_hint">Naslov</string>
    <string name="postdesc_hint">Opis</string>
    <string name="number">Broj telefona</string>
    <string name="large_text">Description here!</string>
    <!-- Strings used for fragments for navigation -->

</resources>