<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".home.HomeFragment">

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <RadioButton
            android:id="@+id/allRB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/all"
            android:checked="true"
            android:fontFamily="@font/averia_libre_light"
            android:textColor="@color/black"
            android:buttonTint = "@color/background"
            android:layout_marginRight="8dp"/>
        <RadioButton
            android:id="@+id/dogsRB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dogs"
            android:fontFamily="@font/averia_libre_light"
            android:textColor="@color/black"
            android:buttonTint = "@color/background"
            android:layout_marginRight="8dp"/>

        <RadioButton
            android:id="@+id/catsRB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cat"
            android:fontFamily="@font/averia_libre_light"
            android:textColor="@color/black"
            android:buttonTint = "@color/background"
            android:layout_marginRight="8dp"/>


        <RadioButton
            android:id="@+id/otherRB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/averia_libre_light"
            android:textColor="@color/black"
            android:buttonTint = "@color/background"
            android:text="@string/other" />
    </RadioGroup>

    <ScrollView
        android:id="@+id/homeScroll"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="8dp"
        android:contentDescription="Scroll view for home content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup">

        <LinearLayout
            android:id="@+id/linearPosts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp" />
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>